@@ -9,3 +9,5 @@ I used this guide to set up this project:
 http://docs.python-guide.org/en/latest/writing/structure/
 
 Note that the project is in process, I am pushing incomplete code here to make sure it is backed up.
+
+TRDIpd0tonetcdf.py does not output EPIC because time2 is not used
