@@ -1,11 +1,9 @@
 Known issues:
 
-Need to flexibly define the netCDF file variables according to the type of file encountered:
-	- workhorse data, straight from the instrument
-	- workhorse data, exported as pd0 from Velocity
-	- sentinel V data exported as pd0 from Velocity (e.g. with 5th beam)
-	
-Need to Compute depths of cells and add depth as an ordinate variables
+Need to Compute depths of cells and add depth as an ordinate variables.
+- We will not do this until we convert to EPIC.
+
+Handle bottom track data.
 
 Would like to restructure as a module that can be loaded instead of one long script full of defs, was having trouble doing this and using Spyder at the same time - unresolved spyder path issues.
 
@@ -13,3 +11,8 @@ It is possible for the 5th beam of a V to have a different number of cells.  Thi
 
 There may be a case where there is only wave data in a Velocity output file.  THe program will probably not handle this well.
 
+Learn how to implment and output log file.
+
+Handle the problem that time values may not be unique when data are converted to EPIC.  For now, using ensemble number as the record dimension.
+
+Reduce file size by forcing smaller variables.  Cor, Int and PGd can all be ushort.  Most ofthe rest can be float (16, not 32 bit).  Right now, they get written as double.
