@@ -1,3 +1,4 @@
+2/2/2017 Change longest dimension to 'Rec' rather than time.  Some ADCP records do not have unique time values.  Remove time2.  Make time a julian day.
 2/1/2017 Added ability to parse Velocity output data, 5 beam
 1/30/2017 Fixed tilts, was reading unsigned, rather than signed shorts
 1/26/2017 Can now read through, though not yet output, data exported by Velocity with the new V series output, though somethign causes the program to exit ungracefully
